fix: Correção dos endpoints da api (em andamento)